feat: responsive until 555px

--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
             <fieldset class="fieldset fieldset--birthday form__fieldset">
               <legend>Date of Birth</legend>
               <div class="sign-up__birthday">
-                <input type="number" class="input sign-up__input input--birthday" placeholder="21">
+                <input type="number" class="input sign-up__input input--birthday" placeholder="day">
                 <button type="button" class="button sign-up__button button--day">
 									<img src="./img/down.svg " alt="down " class="img button__img ">
 								</button>
               </div>
               <div class="sign-up__month">
-                <input type="text" class="input sign-up__input input--month" placeholder="December">
+                <input type="text" class="input sign-up__input input--month" placeholder="month">
                 <button type="button" class="button sign-up__button button--month">
 									<img src="./img/down.svg " alt="down" class="img button__img ">
 								</button>
               </div>
               <div class="sign-up__year">
-                <input type="number" class="input sign-up__input input--year" placeholder="1995">
+                <input type="number" class="input sign-up__input input--year" placeholder="year">
                 <button type="button" class="button sign-up__button button--year">
 									<img src="./img/down.svg " alt="down " class="img button__img ">
 								</button>
