feat: done mark

--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
                   <span class="form__input-error first-name-error"></span>
                 </legend>
                 <input type="text" id="first-name" class="input sign-up__input input--first-name" placeholder="Alice" minlength="2" required>
+                <img src="./img/done.svg" alt="done" class="img img__doneMark first-name-done">
               </fieldset>
               <fieldset class="fieldset fieldset--last-name form__fieldset">
                 <legend>Last Name
                   <span class="form__input-error last-name-error"></span>
                 </legend>
                 <input type="text" id="last-name" class="input sign-up__input input--last-name" placeholder="Miller" minlength="3" required>
+                <img src="./img/done.svg" alt="done" class="img img__doneMark last-name-done">
               </fieldset>
               <fieldset class="fieldset fieldset--nationality form__fieldset">
                 <legend>Nationality
@@ -228,6 +230,7 @@
                   <span class="form__input-error email-error"></span>
                 </legend>
                 <input type="email" id="email" class="input sign-up__input input--email" placeholder="alice.miller@yahoo.com" minlength="5" required>
+                <img src="./img/done.svg" alt="done" class="img img__doneMark email-done">
               </fieldset>
               <fieldset class="fieldset fieldset--birthday form__fieldset">
                 <legend>Date of Birth</legend>
@@ -416,6 +419,7 @@
                   <span class="form__password-wrong pas-error"></span>
                 </legend>
                 <input type="password" id="password" class="input sign-up__input input--password sign-up__password" minlength="8" required>
+                <img src="./img/done.svg" alt="done" class="img img__doneMark password-done">
               </fieldset>
               <fieldset class="fieldset fieldset--confirm-password form__fieldset">
                 <legend>Confirm Password
@@ -423,6 +427,7 @@
                   <span class="form__password-wrong conf-pas-error"></span>
                 </legend>
                 <input type="password" id="confirm-password" class="input sign-up__input input--confirm-password sign-up__password" minlength="8" required>
+                <img src="./img/done.svg" alt="done" class="img img__doneMark confirm-password-done">
               </fieldset>
               <button type="submit" class="button form__submit">
                 Complete Signup
